--- a/src/components/projects/extras/styles/tictactoe.css
+++ b/src/components/projects/extras/styles/tictactoe.css
@@ -1,16 +1,15 @@
-.logo-container {
-    height: 30rem;
-    width: 30rem;
+.logo-container {    
     display: flex;
     flex-direction: column;
     font-size: 10rem;
     line-height: 75%;
-    margin-bottom: 4rem;
+    margin-bottom: -2rem;
     pointer-events: none;
     user-select: none;
     transition: all .5s ease;
     max-width: 100vw;
-    color: #F2D6C5;
+    color: #F2D6C5;    
+    transform: scale(.6);
 }
 
 .logo-small {
