--- a/src/index.css
+++ b/src/index.css
@@ -77,8 +77,13 @@
     .App {
         @apply min-h-screen relative overflow-hidden;
         max-width: 100vw;
-        background-size: 100%;
+        perspective: 10px;
     }
+
+    .home-main-section {
+        @apply min-h-screen mb-2 items-center bg-gradient-to-tr from-transparent via-transparent to-emerald-900/10;
+    }
+
     .nav-bar {
         @apply flex justify-between py-4 m-auto;
         width: calc(80vw);
@@ -87,7 +92,7 @@
         @apply text-lg;
     }
     .nav-bar > p,
-    .nav-bar span {
+    .nav-bar div {
         @apply cursor-pointer;
     }
     .nav-bar span {
@@ -112,6 +117,29 @@
 
     .Home > section {
         @apply grid grid-cols-7 pl-32;
+    }
+    
+    .bg-svg {
+        min-width: 1920px;
+    }
+
+    .parallax {
+        height: 400vh;
+        width: 100vw;
+        overflow-x: hidden;
+        overflow-y: auto;
+        perspective: 1px;
+    }
+    .parallax-layer {
+        position: absolute;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+    }
+    .parallax-layer svg {
+        position: absolute;
+        transform: translateZ(-1px);
     }
 
     .innerLine {
@@ -168,8 +196,26 @@
     .card-image-zoom {
         margin-left: 3rem
     }
+    .card-tags-container {
+        @apply h-fit ml-4 mb-4 grid grid-flow-col grid-rows-4 gap-2 relative;
+    }
     .card-tags {
         @apply transition-opacity border duration-700 px-2 rounded-lg w-fit h-fit ;
+    }
+    .card-tags-container {
+        @apply h-fit ml-4 mb-4 grid grid-flow-col grid-rows-4 gap-2 relative;
+    }
+    .card-tags-container > p:nth-child(4n) {
+        @apply border-emerald-500;
+    }
+    .card-tags-container > p:nth-child(4n -1) {
+        @apply border-rose-500;
+    }
+    .card-tags-container > p:nth-child(4n -2) {
+        @apply border-orange-500;
+    }
+    .card-tags-container > p:nth-child(4n -3) {
+        @apply border-sky-500;
     }
 
     .provider-glitch {
@@ -215,10 +261,12 @@
     .middleline {
         border-top-left-radius: 97%;
         border-bottom-right-radius: 97%;
+        animation: morphmid 5s cubic-bezier(0.65, 0, 0.35, 1) infinite alternate;
     }
     .outerline {
         border-top-left-radius: 85%;
         border-bottom-right-radius: 85%;
+        animation: morph 5s cubic-bezier(0.65, 0, 0.35, 1) infinite alternate;
     }
     .avatar {        
         background-image: url('./assets/avatar/avatar-dots-V3.png');        
@@ -230,13 +278,13 @@
     .hologram {
         @apply p-8 text-xl font-light text-transparent bg-gradient-to-b from-transparent via-emerald-700 to-emerald-500 bg-clip-text animate-pulse relative;
         font-family: 'PT Mono', monospace;
-        filter: drop-shadow(50px 50px 40px rgb(28, 241, 166)) blur(0px);
+        filter: drop-shadow(50px 50px 40px #1cf1a6) blur(0px);
         min-width: 30rem;
     }
     .angle {
         transform: rotateY(30deg) skewX(-30deg) scale(.9);
     }
-    /* text-transparent bg-gradient-to-b from-transparent via-lime-600 to-lime-500 bg-clip-text  */
+    
     .hologram > p {
         z-index: 1;
         white-space: break-spaces;
@@ -246,7 +294,6 @@
     }
     .hologram-dots {
         position: absolute;
-        /* inset: 0; */
         z-index: 3;
         background: radial-gradient(
             rgba(28, 241, 166, 0.5) 5%, transparent 2%
@@ -360,7 +407,7 @@
 
     .project-header-container {
         @apply col-span-7 relative grid grid-cols-2 items-center;
-        min-height: calc(100vh / 2)
+        min-height: calc(50vh)
     }
     .project-logo {
         @apply m-auto h-fit w-96;
@@ -399,16 +446,16 @@
     }
 
     .project-page > section {
-        @apply pl-2 text-white;
+        @apply pl-2 mb-32 h-full ;
     }
     .project-page > section > h2 {
-        @apply text-4xl font-bold -ml-2 mb-8;
+        @apply text-4xl text-white font-bold -ml-2 mb-8;
     }
     .project-page > section > p {
         @apply px-10 text-xl;
     }
     .project-page > img {
-        @apply col-span-3 h-auto w-full m-auto drop-shadow-xl;
+        @apply col-span-3 mb-32 h-auto w-full drop-shadow-xl;
     }
     .project-vertical-image {
         @apply col-span-3 relative flex justify-center;
@@ -528,4 +575,25 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+@keyframes morph {    
+    from {
+        border-top-left-radius: 75%;
+        border-bottom-right-radius: 75%;
+    }
+    to {
+        border-top-left-radius: 95%;
+        border-bottom-right-radius: 95%;
+    }
+}
+@keyframes morphmid {
+    from {
+        border-top-left-radius: 85%;
+        border-bottom-right-radius: 85%;
+    }
+    to {
+        border-top-left-radius: 100%;
+        border-bottom-right-radius: 100%;
+    }
 }
