--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,6 @@
 
 @layer base {
     :root {
-    /* font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; */
     font-family: 'Montserrat', sans-serif;
     line-height: 1.5;
     font-weight: 400;
@@ -77,7 +76,6 @@
     .App {
         @apply min-h-screen relative overflow-hidden;
         max-width: 100vw;
-        perspective: 10px;
     }
 
     .home-main-section {
@@ -91,8 +89,8 @@
     .nav-bar > p {
         @apply text-lg;
     }
-    .nav-bar > p,
-    .nav-bar div {
+    .nav-bar span,
+    .nav-bar div:first-child {
         @apply cursor-pointer;
     }
     .nav-bar span {
@@ -116,30 +114,17 @@
     }
 
     .Home > section {
-        @apply grid grid-cols-7 pl-32;
+        @apply grid grid-cols-7 pl-10 md:pl-32;
+    }
+    .Home > section h1 {
+        font-size: clamp(4rem, 10vw, 7rem);
+    }
+    .Home > section h2 {
+        font-size: clamp(3rem, 10vw, 7rem);    
     }
     
     .bg-svg {
         min-width: 1920px;
-    }
-
-    .parallax {
-        height: 400vh;
-        width: 100vw;
-        overflow-x: hidden;
-        overflow-y: auto;
-        perspective: 1px;
-    }
-    .parallax-layer {
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-    }
-    .parallax-layer svg {
-        position: absolute;
-        transform: translateZ(-1px);
     }
 
     .innerLine {
@@ -169,7 +154,7 @@
     }
 
     .card-container {
-        @apply mb-4 flex justify-between items-center cursor-pointer;
+        @apply md:mb-4 flex flex-col md:flex-row justify-between items-center cursor-pointer;
         width: fit-content;
     }
     .proyect-card > * {
@@ -186,8 +171,9 @@
         margin-right: .5rem;
     }
     .card-image {
-        @apply h-28 ml-10 -mt-4 relative;
+        @apply h-28 mr-10 md:ml-10 md:mr-0 mt-2 md:-mt-4 relative;
         width: 450px;
+        max-width: 100vw;
         filter: grayscale(1) brightness(.5);
         transition: all 300ms ease-in;
         background-position: center;
@@ -378,7 +364,7 @@
         height: 90vh;
     }
     .footer {
-        @apply flex justify-end items-end col-span-7 gap-8 text-emerald-600 mr-16;
+        @apply hidden md:flex justify-end items-end col-span-7 gap-8 text-emerald-600 mr-16;
     }
 
     .fade-in {
@@ -402,7 +388,7 @@
     }
 
     .project-page {
-        @apply grid grid-cols-7 px-32 pt-20 pb-40 min-h-screen gap-32 relative;
+        @apply grid grid-cols-7 md:px-32 pt-20 pb-40 min-h-screen gap-32 relative;
     }
 
     .project-header-container {
@@ -414,20 +400,27 @@
     }
 
     .project-header h1 {
-        @apply text-white font-bold tracking-tighter text-8xl mb-1;
+        @apply text-white px-10 md:px-0 font-bold tracking-tighter text-8xl mb-1;
+        font-size: clamp(4rem, 10vw, 8rem);
     }
     .project-header > div {
-        @apply pl-40;
+        @apply px-10 md:pl-40 md:pr-0;
     }
     .project-header h2 {
         @apply text-2xl font-bold mb-2;
     }
+    .project-header a {
+        @apply block md:inline pr-8;
+    }
     .project-header > div > div {
         @apply header-tags;
     }
+    .project-header > div > p {
+        @apply text-lg md:text-xl mb-8;
+    }
 
     .header-tags {
-        @apply w-fit mb-8 flex gap-2;
+        @apply w-fit mb-8 flex flex-wrap gap-2;
     }
     .header-tags > p {
         @apply card-tags;
@@ -446,16 +439,16 @@
     }
 
     .project-page > section {
-        @apply pl-2 mb-32 h-full ;
+        @apply pl-2 md:mb-32 h-full ;
     }
     .project-page > section > h2 {
-        @apply text-4xl text-white font-bold -ml-2 mb-8;
+        @apply text-4xl text-white font-bold px-5 md:px-0 md:-ml-2 mb-8;
     }
     .project-page > section > p {
-        @apply px-10 text-xl;
+        @apply px-10 text-base md:text-xl;
     }
     .project-page > img {
-        @apply col-span-3 mb-32 h-auto w-full drop-shadow-xl;
+        @apply hidden md:flex col-span-3 mb-32 h-auto w-full drop-shadow-xl;
     }
     .project-vertical-image {
         @apply col-span-3 relative flex justify-center;
